cmake_minimum_required(VERSION 3.22)
project(LeetCode_Weekly_293)

set(CMAKE_CXX_STANDARD 14)

add_executable(Q1 "5234. Find Resultant Array After Removing Anagrams.cpp")
add_executable(Q2 "6064. Maximum Consecutive Floors Without Special Floors.cpp")
add_executable(Q3 "6065. Largest Combination With Bitwise AND Greater Than Zero.cpp")
